# Win_Ver_GUI

./: .gitattributes  Makefile  README.md
src/: CMakeLists.txt  Makefile  WndProc.c  error_handler.cpp  global.h  gui.c  gui.cpp  logic.c  logic.cpp  main.c  main.cpp  win_main.c  win_ver.c  win_ver.h
